GNOME Bugzilla – Bug 683066
brightness-contrast-effect: Don't actually run if it will have no effect
Last modified: 2012-09-03 08:03:06 UTC
See patch. This causes performance issues in gnome-shell when we have opened too many modal dialogs.
Created attachment 222990 [details] [review] brightness-contrast-effect: Don't actually run if it will have no effect Don't run the shader and redirect to an FBO if it won't actually do anything. This saves us on resources a ton.
Review of attachment 222990 [details] [review]: looks okay.
Attachment 222990 [details] pushed as 38b82cb - brightness-contrast-effect: Don't actually run if it will have no effect